--- a/style.css
+++ b/style.css
@@ -311,6 +311,155 @@ span{
     background-color: var(--body-color);
 }
 
+/*========== PROJECTS ==========*/
+.projects_section{
+    width: 100vw;
+    position: relative;
+    padding-top: 5rem;
+}
+
+.projects{
+    width: 85vw;
+    height: 50vh;
+    padding: 2rem 0;
+    margin: 0 auto;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.titlepro{
+    text-align: center;
+}
+
+.project_card{
+    min-height: 15rem;
+    border: 2px solid;
+    border-radius: 1rem;
+    border-color: var(--white-color);
+    display: flex;
+    flex-direction: column;
+    row-gap: .75rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.project_card ul{
+    list-style-type: none;
+}
+
+.btns{
+    margin-top: .75rem;
+    padding: .3rem .5rem;
+    border-radius: .5rem;
+    background-color: var(--white-color);
+    color: var(--body-color);
+}
+
+.btns:hover{
+    background-color: var(--first-color);
+    color: var(--white-color);
+}
+
+/*========== ABOUT ME ==========*/
+.about{
+    width: 100vw;
+    height: 60vh;
+    padding-top: 7rem;
+    text-align: center;
+}
+
+.aboutme{
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+}
+
+.me{
+    line-height: 28px;
+    padding-inline: 2rem;
+}
+
+/*========== SKILLS ==========*/
+.main_skill{
+    width: 100vw;
+    padding-top: 5.4rem;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    column-gap: 5rem;
+    text-align: center;
+}
+
+.skills-links{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.icons_skills{
+    padding-top: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1.5rem;
+}
+
+.path_skills h2{
+    padding-bottom: 2rem;
+}
+
+.link_skill i{
+    color: var(--first-color);
+}
+/*========== CONTACT ==========*/
+.main_form{
+    width: 100%;
+    height: calc(100vh- 4rem);
+    padding-top: 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.help_container{
+    padding-top: 4rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 2rem;
+}
+
+.help_container i{
+    display: inline-block;
+	text-shadow: 0 0 10px #222,1px 1px  0 #450505;
+	color: red;
+
+	animation: beat 1s infinite;
+	transform-origin: center;
+}
+
+@keyframes beat {
+    from { transform: none; }
+    50% { transform: scale(1.4); }
+    to { transform: none; }
+}
+
+.form{
+    line-height: 40px;
+}
+
+.field_form{
+    font-size: var(--normal-font-size);
+    padding: 1.5rem;
+}
+
+.btn_container{
+    display: flex;
+    justify-content: flex-end;
+    column-gap: 2rem;
+}
+
 /*========== BREAKPOINT ==========*/
 @media screen and (min-width: 767px){
     .section{
