--- a/style.css
+++ b/style.css
@@ -440,22 +440,35 @@ span{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    row-gap: 1em;
 }
 
 .icons_skills{
-    padding-top: 2rem;
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 1.5rem;
+    width: 100%;
+    padding: .5em;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    row-gap: 1em;
+    column-gap: 1em;
 }
 
 .path_skills h2{
     padding-bottom: 2rem;
 }
 
+.link_skill{
+    width: 4.5em;
+    background-color: var(--conteiner-color);
+    border-radius: .75em;
+}
+
 .link_skill i{
+    font-size: 40px;
+    padding: .25em;
     color: var(--first-color);
 }
+
 /*========== CONTACT ==========*/
 .main_form{
     width: 100vw;
@@ -567,6 +580,21 @@ span{
 
     .main_skill{
         grid-template-columns: repeat(2, 1fr);
+        margin: 0 4em;
+    }
+
+    .icons_skills{
+        padding: 1em 2em;
+    }
+
+    .link_skill{
+        width: 7em;
+    }
+
+    .link_skill i{
+        font-size: 60px;
+        padding: .45em;
+        color: var(--first-color);
     }
 
     .aboutme{
