adding sass on my project

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,7 +65,7 @@ body{
     display: flex;
     flex-wrap: wrap;
     min-height: 100vh;
-    background-image: url(./media/img/bg-home-desktop.jpg);
+    background-image: url(../media/img/bg-home-desktop.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
