add scss variables and aboutme,changed background

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Exo:wght@400;500;600&family=Hind:wght@300;500&display=swap");
 /*========== VARIABLES CSS ==========*/
+/*========== ABOUT ME ==========*/
+.about {
+  width: 100vw;
+  height: 90vh;
+  padding-top: 7rem;
+  text-align: center;
+}
+
+.aboutme {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2em;
+  justify-content: center;
+}
+
+.me {
+  line-height: 40px;
+  padding-inline: 2rem;
+}
+.me:hover {
+  transform: scale(1.2, 1.2);
+}
+.me p {
+  padding: 1.5em;
+  color: #fff;
+}
+.me i {
+  font-size: 2em;
+  color: hsl(219deg, 69%, 56%);
+}
+
+/*========== VARIABLES CSS ==========*/
 :root {
   --header-height: 4.5rem;
   /* COLORS */
@@ -58,7 +91,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   min-height: 100vh;
-  background-image: url(../media/img/bg-home-desktop.jpg);
+  background-image: url(../media/img/Meteor.svg);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
@@ -217,17 +250,6 @@ header {
 
 /*========== MAIN ==========*/
 /*========== HOME ==========*/
-/* .home_sec{
-    background-image: url(./media/img/bg-home-desktop.jpg);
-    background-position: center;
-    background-size: cover;
-} */
-.home .section {
-  background-image: url(./media/img/bg-home-desktop.jpg);
-  background-position: center;
-  background-size: cover;
-}
-
 .home {
   width: 100vw;
   /* height: calc(100vh - 4.5rem); */
@@ -399,36 +421,6 @@ span {
 .btns:hover {
   background-color: var(--first-color-alt);
   color: var(--body-color);
-}
-
-/*========== ABOUT ME ==========*/
-.about {
-  width: 100vw;
-  padding-top: 7rem;
-  text-align: center;
-}
-
-.aboutme {
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  row-gap: 2em;
-  justify-content: center;
-}
-
-.me {
-  line-height: 40px;
-  padding-inline: 2rem;
-}
-
-.me p {
-  padding: 1.5em;
-  color: var(--white-color);
-}
-
-.me i {
-  font-size: 2em;
-  color: var(--first-color);
 }
 
 /*========== SKILLS ==========*/
