--- a/scss/_aboutme.scss
+++ b/scss/_aboutme.scss
@@ -2,7 +2,7 @@
 /*========== ABOUT ME ==========*/
 .about{
     width: 100vw;
-    height: 90vh;
+    //height: 90vh;
     padding-top: 7rem;
     text-align: center;
 }
