--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,11 +1,46 @@
-/*========== VARIABLES CSS ==========*/
+//========== VARIABLES CSS ==========
 
 
-$first-color: hsl(219, 69, 56);
-$first-color-alt: hsl(219, 69, 52);
-$title-color: hsl(219, 8, 95);
-$text-color: hsl(219, 8, 75);
-$text-color-light: hsl(219, 4, 55);
+$header-height: 4.5rem;
+
+// COLORS 
+// Color moder HSL(hue, saturation, lightness) 
+
+$first-color: hsl(219, 69%, 56%);
+$first-color-alt: hsl(219, 69%, 52%);
+$title-color: hsl(219, 8%, 95%);
+$text-color: hsl(219, 8%, 75%);
+$text-color-light: hsl(219, 4%, 55%);
 $white-color: #fff;
-$body-color: hsl(219, 4, 4);
-$conteiner-color: hsl(219, 4, 7);
+$body-color: hsl(219, 4%, 4%);
+$conteiner-color: hsl(219, 4%, 7%);
+
+// Font and typografhy 
+// .5rem = 8px | 1rem = 16px... 
+$body-font: 'Exo', sans-serif;
+$h1-font-size: 1.5rem;
+$h2-font-size: 1.25rem;
+$h3-font-size: 1rem;
+$normal-font-size: .938rem;
+$small-font-size: .81rem;
+$smalller-font-size: .75rem;
+
+// Font weight 
+$font-medium: 500;
+$font-semi-bold: 600;
+
+// z index 
+$z-tooltip: 10;
+$z-fixed: 100;
+
+// Responsive typography 
+@media screen and (min-width: 767px){
+    
+    $h1-font-size: 2.45rem;
+    $h2-font-size: 1.5rem;
+    $h3-font-size: 1.25rem;
+    $normal-font-size: 1rem;
+    $small-font-size: .875rem;
+    $smalller-font-size: .813rem;
+    
+}
