--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -40,6 +40,10 @@ img{
     height: auto;
 }
 
+main{
+    width: 100%;
+}
+
 /*========== REUSABLE CSS CLASSES ==========*/
 .conteiner{
     max-width: 1024px;
