--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,6 +1,6 @@
 /*========== PROJECTS ==========*/
 .projects_section{
-    width: 100vw;
+    width: 100%;
     position: relative;
     padding: 5rem 1.5em 2em;
 }
