--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,7 +1,6 @@
 /*========== HOME ==========*/
 .home{
-    width: 100vw;
-    /* height: calc(100vh - 4.5rem); */
+    width: 100%;
     height: 100vh;
     position: relative;
     overflow: hidden;
