--- a/scss/style.scss
+++ b/scss/style.scss
@@ -93,7 +93,6 @@
     }
 
     .home_conteiner{
-        width: 100%;
         height: 65vh;
         grid-template-columns: auto auto;
         justify-content: space-around;
@@ -127,6 +126,10 @@
         font-size: 60px;
         padding: .45em;
         color: var(--first-color);
+    }
+
+    .about{
+        height: 90vh;
     }
 
     .aboutme{
