--- a/css/style.css
+++ b/css/style.css
@@ -278,13 +278,12 @@ span {
   align-items: center;
 }
 
-.titlepro {
+.titlepro, .projects figure .capa {
   text-align: center;
 }
 
 .project_card {
   border-color: var(--white-color);
-  display: flex;
   flex-direction: column;
   row-gap: 0.75rem;
   justify-content: center;
@@ -302,7 +301,6 @@ span {
 
 .projects figure img {
   width: 100%;
-  height: 100%;
   transition: all 500ms ease-out;
 }
 
@@ -311,11 +309,11 @@ span {
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 100, 0.1);
+  backdrop-filter: blur(96px);
   transition: all 500ms ease-out;
   opacity: 0;
   visibility: hidden;
-  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -325,6 +323,7 @@ span {
 .projects figure:hover > .capa {
   opacity: 1;
   visibility: visible;
+  color: var(--first-color-alt);
 }
 
 .project_card ul {
@@ -497,9 +496,6 @@ footer {
   padding: 80px 0 30px;
 }
 
-/* .row{
-    width: 95vw;
-} */
 .footer-bottom {
   padding: 30px 0 20px;
   border-top: 1px solid var(--first-color-alt);
