add content on my home page and container bootstrap on all nav pages

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -13,7 +13,13 @@
 }
 
 .home_data{
+    width: 100%;
     text-align: center;
+    
+    p{
+        width: 80%;
+        margin: .6em auto;
+    }
 }
 
 .home_title{
