--- a/css/style.css
+++ b/css/style.css
@@ -97,8 +97,6 @@ header {
 }
 
 .nav_conteiner {
-  width: 95%;
-  margin: 0 auto;
   height: var(--header-height);
   display: flex;
   justify-content: space-between;
@@ -195,7 +193,12 @@ header {
 }
 
 .home_data {
+  width: 100%;
   text-align: center;
+}
+.home_data p {
+  width: 80%;
+  margin: 0.6em auto;
 }
 
 .home_title {
@@ -323,7 +326,6 @@ span {
 .projects figure:hover > .capa {
   opacity: 1;
   visibility: visible;
-  color: var(--first-color-alt);
 }
 
 .project_card ul {
@@ -559,8 +561,12 @@ footer {
   }
 
   .home_data {
-    width: 270px;
+    width: 100%;
     text-align: left;
+  }
+  .home_data p {
+    width: 70%;
+    margin: 0.6em 0;
   }
 
   span {
@@ -590,10 +596,10 @@ footer {
 
   .home_conteiner {
     height: 65vh;
-    grid-template-columns: auto auto;
+    grid-template-columns: 60% 40%;
     justify-content: space-around;
     align-items: center;
-    z-index: -1;
+    gap: 0;
   }
 
   .home_img {
