add container bootstrap at skill page

--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,7 @@ span {
 /*========== SKILLS ==========*/
 .main_skill {
   width: 100vw;
-  padding: 5.4rem 0 2em;
+  padding: 6rem 0 2em;
   grid-template-rows: auto auto;
   justify-content: center;
   row-gap: 3rem;
@@ -563,6 +563,7 @@ footer {
   .home_data {
     width: 100%;
     text-align: left;
+    margin-left: 1em;
   }
   .home_data p {
     width: 70%;
@@ -599,7 +600,7 @@ footer {
     grid-template-columns: 60% 40%;
     justify-content: space-around;
     align-items: center;
-    gap: 0;
+    gap: 1em;
   }
 
   .home_img {
@@ -613,7 +614,7 @@ footer {
 
   .main_skill {
     grid-template-columns: repeat(2, 1fr);
-    margin: 0 4em;
+    padding-bottom: 3em;
   }
 
   .icons_skills {
