--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -19,8 +19,10 @@ footer{
     font-size: 24px;
     color: var(--white-color);
     padding: 3px;
+
+    &:hover{
+        color: var(--first-color-alt);
+    }
 }
 
-.social-icons a:hover{
-    color: var(--first-color-alt);
-}
+
