--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -8,9 +8,49 @@
 .projects{
     width: 90%;
     margin: 0 auto;
+    @extend .grid;
     grid-template-rows: repeat(3, 1fr);
     justify-content: center;
     align-items: center;
+
+    ul{
+        list-style-type: none;
+    }
+
+    figure{
+        position: relative;
+        width: 100%;
+        border-radius: 1.5rem;
+        overflow: hidden;
+        cursor: pointer;
+
+        img{
+            width: 100%;
+            transition: all 500ms ease-out;
+        }
+
+        .capa{
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 100, 0.1);
+            backdrop-filter: blur(96px);
+            transition: all 500ms ease-out;
+            opacity: 0;
+            visibility: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            @extend .titlepro;
+        }
+
+        &:hover > .capa{
+            opacity: 1;
+            visibility: visible;
+        }
+    }  
 }
 
 .titlepro{
@@ -26,45 +66,6 @@
     background-size: cover;
 }
 
-.projects figure{
-    position: relative;
-    width: 100%;
-    border-radius: 1.5rem;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.projects figure img{
-    width: 100%;
-    transition: all 500ms ease-out;
-}
-
-.projects figure .capa{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 100, 0.1);
-    backdrop-filter: blur(96px);
-    transition: all 500ms ease-out;
-    opacity: 0;
-    visibility: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    @extend .titlepro;
-}
-
-.projects figure:hover > .capa{
-    opacity: 1;
-    visibility: visible;
-}
-
-.project_card ul{
-    list-style-type: none;
-}
-
 .btns{
     padding: .4rem .8rem;
     margin: .5rem;
@@ -74,9 +75,11 @@
     background-color: var(--body-color);
     color: var(--first-color-alt);
     font-weight: var(--font-semi-bold);
+
+    &:hover{
+        background-color: var(--first-color-alt);
+        color: var(--body-color);
+    }
 }
 
-.btns:hover{
-    background-color: var(--first-color-alt);
-    color: var(--body-color);
-}
+
