--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -2,6 +2,7 @@
 .main_skill{
     width: 100vw;
     padding: 6rem 0 2em;
+    @extend .grid;
     grid-template-rows: auto auto;
     justify-content: center;
     row-gap: 3rem;
@@ -34,14 +35,14 @@
     width: 4.5em;
     background-color: var(--conteiner-color);
     border-radius: .75em;
-}
 
-.link_skill:hover{
-    transform: scale(1.2,1.2);
-}
+    &:hover{
+        transform: scale(1.2,1.2);
+    }
 
-.link_skill i{
-    font-size: 40px;
-    padding: .25em;
-    color: var(--first-color);
+    i{
+        font-size: 40px;
+        padding: .25em;
+        color: var(--first-color);
+    }
 }
