--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,3 +1,4 @@
+@import 'base/variables.scss'; 
 /*========== CONTACT ==========*/
 .main_form{
     width: 100vw;
@@ -10,42 +11,155 @@
 }
 
 .form{
-    padding: 0 1rem;
-    margin: 0 auto;
+    width: 90%;
+    padding: 2rem 1rem;
+    margin: 0 auto 4rem;
     line-height: 40px;
+    text-align: center;
+    backdrop-filter: blur(8px) saturate(177%);
+    -webkit-backdrop-filter: blur(8px) saturate(177%);
+    background-color: rgba(17, 25, 40, 0.14);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125); 
 }
 
-.help_conteiner{
-    padding: 4rem 1rem 2rem;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    row-gap: 2rem;
+.input-container{
+    width: 100%;
+    position: relative;
+}
 
-    i{
-        display: inline-block;
-        text-shadow: 0 0 10px #222,1px 1px  0 #450505;
-        color: red;
-    
-        animation: beat 1s infinite;
-        transform-origin: center;
+.label{
+    position: absolute;
+    height: 6px;
+    left: 10px;
+    top: 5px;
+    transition: all 0.2s;
+    padding: 0 2px;
+    z-index: 1;
+    color: #b3b3b3;
+
+    &::before {
+        content: "";
+        height: 8px;
+        background: $conteiner-color;
+        position: absolute;
+        left: 0px;
+        top: 14px;
+        width: 100%;
+        z-index: -1;
     }
 }
 
-@keyframes beat {
-    from { transform: none; }
-    50% { transform: scale(1.4); }
-    to { transform: none; }
+.text-input{
+    padding: 0.8rem;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #2f2c45;
+    background: $conteiner-color;
+    border-radius: 5px;
+    font-size: 18px;
+    outline: none;
+    transition: all 0.3s;
+    color: #fff;
+
+    &:focus{
+        border: 2px solid $first-color;
+
+        &::placeholder{
+            opacity: 1;
+        }
+    }
+
+    &::placeholder{
+        font-size: 16px;
+        opacity: 0;
+        transition: all 0.3s;
+    }
+}
+
+.text-input:focus + .label, .filled{
+    top: -16px;
+    color: $first-color;
+    font-size: 14px;
+}
+
+.mail-img{
+    width: 100%;
+    height: 400px;
+}
+
+.mail-svg{
+    width: 100%;
+    height: 100%;
+    background-image: url(../media/img/mail-sent-animate.svg);
+    background-position: center;
+    background-size: cover;
 }
 
 .field_form{
     font-size: var(--normal-font-size);
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem 0;
 }
 
 .btn_conteiner{
     display: flex;
     justify-content: flex-end;
-    column-gap: 2rem;
+    margin-top: 1em;
+}
+
+button {
+    font-family: inherit;
+    font-size: 20px;
+    background: $conteiner-color;
+    color: white;
+    padding: 4px 2em;
+    padding-left: 1.9em;
+    display: flex;
+    align-items: center;
+    border: 2px solid #2f2c45;
+    border-radius: 5px;
+    overflow: hidden;
+    transition: all 0.2s;
+
+    .span_btn {
+        display: block;
+        margin-left: 0.3em;
+        transition: all 0.3s ease-in-out;
+    }
+
+    svg {
+        display: block;
+        transform-origin: center center;
+        transition: transform 0.3s ease-in-out;
+    }
+    
+    &:hover{
+        border: 2px solid $first-color;
+    }
+}
+     
+button:hover .svg-wrapper {
+    animation: fly-1 0.6s ease-in-out infinite alternate;
+}
+
+button:hover svg {
+    transform: translateX(1.2em) rotate(45deg) scale(1.1);
+}
+
+button:hover .span_btn {
+    transform: translateX(5em);
+}
+
+button:active {
+    transform: scale(0.95);
+}
+
+@keyframes fly-1 {
+    from {
+        transform: translateY(0.1em);
+    }
+
+    to {
+        transform: translateY(-0.1em);
+    }
 }
