--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,3 +1,4 @@
+@import 'base/variables.scss';
 /*========== PROJECTS ==========*/
 .projects_section{
     width: 100%;
@@ -58,7 +59,7 @@
 }
 
 .project_card{
-    border-color: var(--white-color);
+    border-color: $white-color;
     flex-direction: column;
     row-gap: .75rem;
     justify-content: center;
@@ -72,13 +73,13 @@
     outline: none;
     border: 2px solid;
     border-radius: .5rem;
-    background-color: var(--body-color);
-    color: var(--first-color-alt);
-    font-weight: var(--font-semi-bold);
+    background-color: $body-color;
+    color: $first-color-alt;
+    font-weight: $font-semi-bold;
 
     &:hover{
-        background-color: var(--first-color-alt);
-        color: var(--body-color);
+        background-color: $first-color-alt;
+        color: $body-color;
     }
 }
 
