--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -11,9 +11,9 @@ html{
 }
 
 body{
-    font-family: var(--body-font);
-    font-size: var(--normal-font-size);
-    color: var(--text-color);
+    font-family: $body-font;
+    font-size: $normal-font-size;
+    color: $text-color;
     display: flex;
     flex-wrap: wrap;
     min-height: 100vh;
@@ -24,15 +24,15 @@ body{
 }
 
 h1, h2, h3{
-    color: var(--title-color);
-    font-weight: var(--font-semi-bold);
+    color: $title-color;
+    font-weight: $font-semi-bold;
 }
 
 a{
     text-decoration: none;
     font-weight: 500;
     transition: all 0 ease;
-    color: var(--text-color-light);
+    color: $text-color-light;
 }
 
 img{
@@ -63,7 +63,7 @@ main{
 
 
 .section_title{
-    font-size: var(--h2-font-size);
+    font-size: $h2-font-size;
     text-align: center;
     margin-bottom: 2.5rem;
 }
