--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,3 +1,4 @@
+@import 'base/variables.scss';
 /*========== HOME ==========*/
 .home{
     width: 100%;
@@ -24,7 +25,7 @@
 }
 
 .home_title{
-    font-size: var(--h1-font-size);
+    font-size: $h1-font-size;
     margin-bottom: 1rem;
 }
 
@@ -50,21 +51,21 @@
 
 
 .home_subtitle{
-    font-size: var(--h3-font-size);
+    font-size: $h3-font-size;
     margin-bottom: .25rem;
 }
 
 .home_web{
-    font-size: var(--small-font-size);
+    font-size: $small-font-size;
     font-weight: 400;
-    color: var(--text-color);
+    color: $text-color;
     display: inline-flex;
     align-items: center;
     column-gap: .25rem;
 }
 
 .home_web i{
-    color: var(--first-color);
+    color: $first-color;
 }
 
 .home_img{
