--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -1,3 +1,4 @@
+@import 'base/variables.scss';
 /*========== SKILLS ==========*/
 .main_skill{
     width: 100vw;
@@ -33,7 +34,7 @@
 
 .link_skill{
     width: 4.5em;
-    background-color: var(--conteiner-color);
+    background-color: $conteiner-color;
     border-radius: .75em;
 
     &:hover{
@@ -43,6 +44,6 @@
     i{
         font-size: 40px;
         padding: .25em;
-        color: var(--first-color);
+        color: $first-color;
     }
 }
